Updated bottom and top margins of image and content to prevent overlapping

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@
     background-size: cover;
 }
 
+/* Circular Profile Image */
+
 .profile {
     width: 250px;
     height: 250px;
@@ -23,6 +25,7 @@
     transform-style:preserve-3d;
     animation: spin 2s ease-in-out;
     display: inline-block;
+    margin-bottom: 10%;
 
 }
 
@@ -37,22 +40,6 @@
 }
 
 
-/* Selfie image */
-.selfie{
-    transform: rotateY(0deg);
-}
-
-/* anime image */
-.anime {
-    transform: rotateY(100deg);
-}
-
-@keyframes spin {
-    0% {transform: rotateY(0deg);}
-    100% { transform: rotateY(710deg); }
-
-}
-
 /* Content Section */
 
 .content {
@@ -66,7 +53,7 @@
 
 .content, h1 {
     font-size: 60px;
-    margin-top: 200px;
+    margin-top: 20%;
 }
 
 .content, p {
@@ -76,7 +63,7 @@
     font-size: 30px;
 }
 
-/* Using animation to slideIn heading and paragraph under profile img */
+/* Using slideIn animation style to heading and paragraph under profile img */
 .content h1,
 .content p {
     opacity: 0;
@@ -92,6 +79,11 @@
 
 .content p {
     animation-delay: 2.6s;
+}
+
+@keyframes spin {
+    from {transform: rotateY(0deg);}
+    to { transform: rotateY(712deg); }
 }
 
 @keyframes slideIn {
